@@ -83,7 +83,7 @@ public class Automator {
 		if (tag.contains("_class"))
 			cls = Class.forName(tag.getString("_class"));
 		if (obj == null)
-			obj = cls.newInstance();
+			obj = cls.getConstructor().newInstance();
 		Class<?> mcls = cls;
 		while (cls.getAnnotation(SerialClass.class) != null) {
 			for (Field f : cls.getDeclaredFields()) {
@@ -93,7 +93,7 @@ public class Automator {
 				Tag itag = tag.get(f.getName());
 				f.setAccessible(true);
 				if (itag != null)
-					f.set(obj, fromTagRaw(itag, f.getType(), f.get(obj), sf, pred));
+					f.set(obj, fromTagRaw(itag, TypeInfo.of(f), f.get(obj), pred));
 			}
 			cls = cls.getSuperclass();
 		}
@@ -115,60 +115,56 @@ public class Automator {
 	}
 
 	@SuppressWarnings({"unchecked", "rawtypes"})
-	public static Object fromTagRaw(Tag tag, Class<?> cls, Object def, SerialClass.SerialField sfield, Predicate<SerialClass.SerialField> pred) throws Exception {
+	public static Object fromTagRaw(Tag tag, TypeInfo cls, Object def, Predicate<SerialClass.SerialField> pred) throws Exception {
 		if (tag == null)
-			if (cls == ItemStack.class)
+			if (cls.getAsClass() == ItemStack.class)
 				return ItemStack.EMPTY;
 			else
 				return null;
-		if (MAP.containsKey(cls))
-			return MAP.get(cls).fromTag.apply(tag);
+		if (MAP.containsKey(cls.getAsClass()))
+			return MAP.get(cls.getAsClass()).fromTag.apply(tag);
 		if (cls.isArray()) {
 			ListTag list = (ListTag) tag;
 			int n = list.size();
-			Class<?> com = cls.getComponentType();
-			Object ans = Array.newInstance(com, n);
+			TypeInfo com = cls.getComponentType();
+			Object ans = Array.newInstance(com.getAsClass(), n);
 			for (int i = 0; i < n; i++) {
-				Array.set(ans, i, fromTagRaw(list.get(i), com, null, null, pred));
+				Array.set(ans, i, fromTagRaw(list.get(i), com, null, pred));
 			}
 			return ans;
 		}
-		if (List.class.isAssignableFrom(cls)) {
+		if (List.class.isAssignableFrom(cls.getAsClass())) {
 			ListTag list = (ListTag) tag;
-			int n = list.size();
-			if (sfield.generic().length != 1)
-				throw new Exception("generic field not correct for list");
-			Class<?> com = sfield.generic()[0];
+			TypeInfo com = cls.getGenericType(0);
 			if (def == null)
 				def = cls.newInstance();
 			List ans = (List<?>) def;
 			ans.clear();
 			for (Tag iTag : list) {
-				ans.add(fromTagRaw(iTag, com, null, null, pred));
+				ans.add(fromTagRaw(iTag, com, null, pred));
 			}
 			return ans;
 		}
-		if (Map.class.isAssignableFrom(cls)) {
+		if (Map.class.isAssignableFrom(cls.getAsClass())) {
 			if (def == null)
 				def = cls.newInstance();
-			if (sfield.generic().length != 2)
-				throw new Exception("generic field not correct for map");
-			Class<?> key = sfield.generic()[0];
-			Class<?> val = sfield.generic()[1];
+			TypeInfo key = cls.getGenericType(0);
+			TypeInfo val = cls.getGenericType(1);
 			CompoundTag ctag = (CompoundTag) tag;
 			Map map = (Map) def;
 			map.clear();
 			for (String str : ctag.getAllKeys()) {
-				Object mkey = key == String.class ? str : MAP.get(key).fromTag.apply(StringTag.valueOf(str));
-				map.put(mkey, fromTagRaw(ctag.get(str), val, null, null, pred));
+				Object mkey = key.getAsClass() == String.class ? str :
+						MAP.get(key.getAsClass()).fromTag.apply(StringTag.valueOf(str));
+				map.put(mkey, fromTagRaw(ctag.get(str), val, null, pred));
 			}
 			return map;
 		}
-		if (cls.isEnum()) {
-			return Enum.valueOf((Class) cls, tag.getAsString());
+		if (cls.getAsClass().isEnum()) {
+			return Enum.valueOf((Class) cls.getAsClass(), tag.getAsString());
 		}
-		if (cls.getAnnotation(SerialClass.class) != null)
-			return fromTag((CompoundTag) tag, cls, def, pred);
+		if (cls.getAsClass().getAnnotation(SerialClass.class) != null)
+			return fromTag((CompoundTag) tag, cls.getAsClass(), def, pred);
 		throw new Exception("unsupported class " + cls);
 	}
 
@@ -187,7 +183,7 @@ public class Automator {
 					continue;
 				f.setAccessible(true);
 				if (f.get(obj) != null)
-					tag.put(f.getName(), toTagRaw(f.getType(), f.get(obj), sf, pred));
+					tag.put(f.getName(), toTagRaw(TypeInfo.of(f), f.get(obj), pred));
 			}
 			cls = cls.getSuperclass();
 		}
@@ -203,48 +199,43 @@ public class Automator {
 		return (T) ExceptionHandler.get(() -> fromTag(tag, cls, null, f -> true));
 	}
 
-	@SuppressWarnings("unchecked")
-	public static Tag toTagRaw(Class<?> cls, Object obj, SerialClass.SerialField sfield, Predicate<SerialClass.SerialField> pred) throws Exception {
-		if (MAP.containsKey(cls))
-			return MAP.get(cls).toTag.apply(obj);
+	public static Tag toTagRaw(TypeInfo cls, Object obj, Predicate<SerialClass.SerialField> pred) throws Exception {
+		if (MAP.containsKey(cls.getAsClass()))
+			return MAP.get(cls.getAsClass()).toTag.apply(obj);
 		if (cls.isArray()) {
 			ListTag list = new ListTag();
 			int n = Array.getLength(obj);
-			Class<?> com = cls.getComponentType();
+			TypeInfo com = cls.getComponentType();
 			for (int i = 0; i < n; i++) {
-				list.add(toTagRaw(com, Array.get(obj, i), null, pred));
+				list.add(toTagRaw(com, Array.get(obj, i), pred));
 			}
 			return list;
 		}
-		if (List.class.isAssignableFrom(cls)) {
-			if (sfield.generic().length != 1)
-				throw new Exception("generic field not correct for list");
+		if (List.class.isAssignableFrom(cls.getAsClass())) {
 			ListTag list = new ListTag();
 			int n = ((List<?>) obj).size();
-			Class<?> com = sfield.generic()[0];
+			TypeInfo com = cls.getGenericType(0);
 			for (int i = 0; i < n; i++) {
-				list.add(toTagRaw(com, ((List<?>) obj).get(i), null, pred));
+				list.add(toTagRaw(com, ((List<?>) obj).get(i), pred));
 			}
 			return list;
 		}
-		if (Map.class.isAssignableFrom(cls)) {
-			if (sfield.generic().length != 2)
-				throw new Exception("generic field not correct for map");
-			Class<?> key = sfield.generic()[0];
-			Class<?> val = sfield.generic()[1];
+		if (Map.class.isAssignableFrom(cls.getAsClass())) {
+			TypeInfo key = cls.getGenericType(0);
+			TypeInfo val = cls.getGenericType(1);
 			CompoundTag ctag = new CompoundTag();
 			Map<?, ?> map = (Map<?, ?>) obj;
 			for (Object str : map.keySet()) {
-				String mkey = key == String.class ? (String) str : toTagRaw(key, str, null, pred).getAsString();
-				ctag.put(mkey,
-						toTagRaw(val, map.get(str), null, pred));
+				String mkey = key.getAsClass() == String.class ? (String) str :
+						toTagRaw(key, str, pred).getAsString();
+				ctag.put(mkey, toTagRaw(val, map.get(str), pred));
 			}
 			return ctag;
 		}
-		if (cls.isEnum())
+		if (cls.getAsClass().isEnum())
 			return StringTag.valueOf(((Enum<?>) obj).name());
-		if (cls.getAnnotation(SerialClass.class) != null)
-			return toTag(new CompoundTag(), cls, obj, pred);
+		if (cls.getAsClass().getAnnotation(SerialClass.class) != null)
+			return toTag(new CompoundTag(), cls.getAsClass(), obj, pred);
 		throw new Exception("unsupported class " + cls);
 	}
 
